--- a/src/layouts/Footer/Footer.scss
+++ b/src/layouts/Footer/Footer.scss
@@ -1,6 +1,6 @@
 /* ##### Footer Area ##### */
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
     div .footer-area {
         position: absolute;
         width: 100vw;
