--- a/src/layouts/Header/header.css
+++ b/src/layouts/Header/header.css
@@ -46,6 +46,7 @@
         color:#fff;
         z-index:1;
         margin-top:5px;
+        overflow: hidden;
     }
     .navbar-nav .nav-item .nav-link{
         padding: 0.7em 1em!important;
@@ -224,7 +225,7 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     color: #FF8C21 ;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
     div .stripe1 {
         visibility: hidden;
         opacity: 0;
@@ -254,7 +255,7 @@ nav{-webkit-transition: padding-top .3s,padding-bottom .3s;
     background-color: #D12424;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 800px) {
     div .marketplace {
         margin-left: 16px;
         margin-top: -10px;
